# MAI_OS

./: .gitignore  Dockerfile  README.md
CP/doc/: 209_Кобзев_КП.docx  215_Кобзев_КП.docx  ~$5_Кобзев_Лаб1.docx
CP/src/: DagScheduler.cpp  DagScheduler.h  config.yaml  main.cpp
lab1/doc/: 209_Кобзев_Лаб1.docx  215_Кобзев_Лаб1.docx
lab1/src/: child.c  parent.c
lab2/doc/: 209_Кобзев_Лаб2.docx  215_Кобзев_Лаб2.docx
lab2/src/: lab2.sh  main.c
lab3/doc/: 209_Кобзев_Лаб3.docx  215_Кобзев_Лаб3.docx
lab3/src/: child.c  parent.c  shared_struct.h
lab4/doc/: 209_Кобзев_Лаб4.docx  215_Кобзев_Лаб4.docx
lab4/src/: Makefile
lab4/src/contracts/: contracts.h
lab4/src/lib1/: lib1.cpp
lab4/src/lib2/: lib2.cpp
lab4/src/program1/: main1.cpp
lab4/src/program2/: main2.cpp
lab5/: 209_Кобзев_Лаб5.docx
lab5-7/doc/: 215_Кобзев_Лаб5-7.docx
lab5-7/src/: CMakeLists.txt  computing_node.cpp  main.cpp
lab6/: 215_Кобзев_Лаб6.docx
lab8/: 215_Кобзев_Лаб8.docx
